PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/CATS_TMP_BILL__c.object-meta.xml
<CustomObject>
    <label>청구내역</label>
    <nameField>
        <displayFormat>BILL-{YY}{MM}{DD}-{00000}</displayFormat>
        <label>청구내역 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>