PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/AcquExch__c.field-meta.xml
<CustomField>
    <fullName>AcquExch__c</fullName>
    <label>매입시 적용환율</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>