PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/ApprNo__c.field-meta.xml
<CustomField>
    <fullName>ApprNo__c</fullName>
    <label>승인번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>