PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/BilAmt__c.field-meta.xml
<CustomField>
    <fullName>BilAmt__c</fullName>
    <label>청구원금</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>