PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/BilFee__c.field-meta.xml
<CustomField>
    <fullName>BilFee__c</fullName>
    <label>수수료</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>