PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/BilTot__c.field-meta.xml
<CustomField>
    <fullName>BilTot__c</fullName>
    <label>청구 총금액[원화환산]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>