PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/BilType__c.field-meta.xml
<CustomField>
    <fullName>BilType__c</fullName>
    <label>청구구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>