PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/BilWorkDate__c.field-meta.xml
<CustomField>
    <fullName>BilWorkDate__c</fullName>
    <label>청구내역 작업일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>