PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>