PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/CollNo__c.field-meta.xml
<CustomField>
    <fullName>CollNo__c</fullName>
    <label>매입추심번호[매출전표일련번호]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>