PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/CorpBizNo__c.field-meta.xml
<CustomField>
    <fullName>CorpBizNo__c</fullName>
    <label>사업자번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>