PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/CorpNo__c.field-meta.xml
<CustomField>
    <fullName>CorpNo__c</fullName>
    <label>기업번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>