PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/EstbName__c.field-meta.xml
<CustomField>
    <fullName>EstbName__c</fullName>
    <label>사업장(부서)명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>