PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/EstbNo__c.field-meta.xml
<CustomField>
    <fullName>EstbNo__c</fullName>
    <label>사업장(부서)번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>