PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/FILE_YN__c.field-meta.xml
<CustomField>
    <fullName>FILE_YN__c</fullName>
    <label>파일생성여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>