PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/InstMonth__c.field-meta.xml
<CustomField>
    <fullName>InstMonth__c</fullName>
    <label>할부개월수</label>
    <length>255</length>
    <type>Text</type>
</CustomField>