PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/InstType__c.field-meta.xml
<CustomField>
    <fullName>InstType__c</fullName>
    <label>결제구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>