PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/MembshipFee__c.field-meta.xml
<CustomField>
    <fullName>MembshipFee__c</fullName>
    <label>연회비</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>