PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/MEMID__c.field-meta.xml
<CustomField>
    <fullName>MEMID__c</fullName>
    <label>회원사회원번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>