PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/MerchBizNo__c.field-meta.xml
<CustomField>
    <fullName>MerchBizNo__c</fullName>
    <label>가맹점 사업자번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>