PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/MerchName__c.field-meta.xml
<CustomField>
    <fullName>MerchName__c</fullName>
    <label>가맹점명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>