PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/OrgnApprDate__c.field-meta.xml
<CustomField>
    <fullName>OrgnApprDate__c</fullName>
    <label>(원)승인일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>