PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/OriginApprTot__c.field-meta.xml
<CustomField>
    <fullName>OriginApprTot__c</fullName>
    <label>(원)매출(승인)금액[원화]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>