PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/OriginMerchBizNo__c.field-meta.xml
<CustomField>
    <fullName>OriginMerchBizNo__c</fullName>
    <label>PG 대표 가맹점사업자번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>