PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/OriginMerchName__c.field-meta.xml
<CustomField>
    <fullName>OriginMerchName__c</fullName>
    <label>PG 대표 가맹점명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>