PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/OriginTransTime__c.field-meta.xml
<CustomField>
    <fullName>OriginTransTime__c</fullName>
    <label>(원)승인시간</label>
    <length>255</length>
    <type>Text</type>
</CustomField>