PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/RestInstMonth__c.field-meta.xml
<CustomField>
    <fullName>RestInstMonth__c</fullName>
    <label>잔여할부개월수</label>
    <length>255</length>
    <type>Text</type>
</CustomField>