PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/SeqNo__c.field-meta.xml
<CustomField>
    <fullName>SeqNo__c</fullName>
    <label>전문데이타내 순번</label>
    <length>255</length>
    <type>Text</type>
</CustomField>