PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/ServTypeYN__c.field-meta.xml
<CustomField>
    <fullName>ServTypeYN__c</fullName>
    <label>할인서비스 구분</label>
    <length>255</length>
    <type>Text</type>
</CustomField>