PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/SlipNo__c.field-meta.xml
<CustomField>
    <fullName>SlipNo__c</fullName>
    <label>전표번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>