PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/USDAcquTot__c.field-meta.xml
<CustomField>
    <fullName>USDAcquTot__c</fullName>
    <label>매입 합계[달러]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>