PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>이용자명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>