PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_BILL__c/fields/UserNo__c.field-meta.xml
<CustomField>
    <fullName>UserNo__c</fullName>
    <label>이용자번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>